Revert "Thêm tính năng chia sẻ tài liệu"
